# cli

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yml
config/: agent_defaults.yaml
scripts/: bootstrap-dev-windows.ps1  install.ps1  install.sh  uninstall.ps1  uninstall.sh
scripts/install/: gvproxy.sh  install.ps1  install.sh  linux.sh  macos.sh  uninstall-windows.ps1  uninstall.ps1  uninstall.sh  windows.ps1
src/: lib.rs  main.rs  main.tsx
src/app/: App.tsx  Layout.tsx
src/app/components/: code-block.tsx  install-tabs.tsx  terminal-header.tsx  terminal-section.tsx
src/app/pages/: AgentsPage.tsx  DocsPage.tsx  Home.tsx  McpPage.tsx  SkillPage.tsx
src/tui/: app.rs  commands.rs  event.rs  grid.rs  mod.rs  renderer.rs  run.rs  terminal.rs  text_input.rs  theme.rs  upload.rs
test/: lib.sh  run_all.sh  test_cache.sh  test_cleanup.sh  test_config.sh  test_doctor.sh  test_error_handling.sh  test_global_flags.sh  test_help.sh  test_images.sh  test_lifecycle.sh  test_ps.sh  test_pull.sh
test/windows/: run_basic.ps1
