[package]
name = "nanosb-cli"
version = "0.1.0"
edition = "2021"
description = "CLI and TUI for nanosandbox"
license = "Apache-2.0"
repository = "https://github.com/nanosandboxai/cli"
authors = ["DevDone Labs"]

[[bin]]
name = "nanosb"
path = "src/main.rs"

[dependencies]
# Sandbox SDK — wraps nanosandbox runtime with agent-aware features.
sandbox = { path = "../sandbox/crates/sandbox" }
# Direct runtime access for logging and low-level runtime APIs.
runtime = { path = "../runtime/crates/runtime" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tabled = "0.15"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"

# TUI
ratatui = "0.29"
russh = "0.57"
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
vt100 = "0.15"
tui-term = "0.2"
arboard = "3.6"
png = "0.17"

# Utilities
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
unicode-width = "0.2"
async-trait = "0.1"
sha2 = "0.10"
env_logger = "0.11"
log = "0.4"

# Platform-specific (TUI terminal handling)
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# On Windows, redirect vm-memory to the patched fork that compiles on non-Unix.
# This is needed because the CLI is outside the runtime workspace which has its own patch.
[patch.crates-io]
vm-memory = { path = "../runtime/deps/libkrun/src/vm-memory-win" }

# Redirect runtime git URL to local path so the sandbox crate (which depends on
# runtime via git) uses the same local version as the CLI itself.
[patch.'https://github.com/nanosandboxai/runtime.git']
runtime = { path = "../runtime/crates/runtime" }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
